--- a/ProjectPortfolio/Views/About/Index.cshtml
+++ b/ProjectPortfolio/Views/About/Index.cshtml
@@ -3,5 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>About John</h2>
+
+<a><img src="~/Images/imgCoderJohn.jpg" alt="Image of John Coding at Dublin Business School, Dublin, Ireland"/></a>
 
