--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
 	<meta name="description" content="Software Portolio MVC Web App showing the Portfolio of John Mulhall"/>
 	<meta name="keywords" content="software, development, csharp, asp.net, java, writing, html5, css3, javascript, mvc, databases, postgresql, mysql, sqlserver, frameworks, technology, azure, oop"/>
 	<meta name="author" content="John Mulhall"/>	
-	<!--<meta name="image" src="~/Images/imgCoderJohn.jpg" alt="Image of John Coding at DBS, Dublin, Ireland"/>	-->
     <title>@ViewBag.Title - Software Portfolio</title>	
     <!--Favicon-->
     <link rel="shortcut icon" href="~/Images/favicon.ico" type="image/x-icon">
@@ -20,7 +19,7 @@
     <div id="wrapper">  
 		<!--Header-->
 		<header>
-            <h1><sup>Scientia Deo Est</sup></h1>
+            <h1><sup>Scientia Est</sup></h1>
 		    <h1>Software Portolio John Mulhall</h1>	
 			<a id="github_profile" href="https://github.com/johnmlhll" target="_blank">
 				<img src="~/Images/imgGithubProfile.png" alt="image of GitHub with link to profile"/>
@@ -39,7 +38,7 @@
         			    <li><a>@Html.ActionLink("Irish Tech News","Index","IrishTechNews")</a></li>
         			    <li><a>@Html.ActionLink("Contact John","Index","Contact")</a></li>	
                     </ul>
-        	    <a href="javascript:void(0)" id="btn_close" onclick="closeNav()"><p>Close Menu</p></a>
+        	    <a href="javascript:void(0)" class="btn_close" onclick="closeNav()"><p>Close Menu</p></a>
                 </nav>	
     		    <!--Restricted Navbar < 768px-->
                 <nav id="restricted_nav">  
@@ -50,7 +49,7 @@
                         <li><a>@Html.ActionLink("ITN Writing","Index","IrishTechNews")</a></li>
                         <li><a>@Html.ActionLink("Contact","Index","Contact")</a></li>  
                     </ul>
-                <a href="javascript:void(0)" id="btn_close" onclick="closeNav()"><p>Close Menu</p></a>
+                <a href="javascript:void(0)" class="btn_close" onclick="closeNav()"><p>Close Menu</p></a>
                 </nav>  
 			</div>		
         </div>	
@@ -66,12 +65,12 @@
 		    <ul id="footer_shares_linkedin">
 			    <li>
                     <a href="https://plus.google.com/share?url=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank">
-                        <img src="~/Images/imgShareGooglePlus.png"/>
+                        <img src="~/Images/imgShareGooglePlus.png" alt="Image of the Google plus share icon"/>
                     </a> 
                 </li>
                 <li>
                     <a>
-						<script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+						<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
                         <script type="IN/Share" data-url="https://jmulhall.azurewebsites.net"></script>
 					</a> 
 				</li>
@@ -99,7 +98,7 @@
     				</li>
     				<li>
     					<a href="http://www.Facebook.com/sharer.php?u=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank">
-    						<img src="~/Images/imgShareFacebook.png"/>
+    						<img src="~/Images/imgShareFacebook.png" alt="Image of Facebook Share Icon for Page"/>
     					</a>
     				</li>
     			</ul>
