--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -53,100 +53,99 @@
 			Selected projects completed on the course along with those of note completed in my spare time then and since make up the 
 			bulk of my software portfolio. Please note certain Projects on my Github profile that predate the portfolio start date of 
 			September 2016 will not be included in my software portfolio. I have implemented a JavaScript toggle function to make
-			purusal of my software portfolio more user friendly, so just click on any of the project entries to see the details 
-			associated with the entry.
+			purusal of my software portfolio more user friendly, so just click on any of the "Show More/Less" buttons under the 
+			project entries to see the details associated with the entry.
 		</p>
-	
         <!--Portfolio Entry 01 - Project Portfolio-->
         <div class="portfolio_entry">
             <hr/>   
             <p>
                 <strong>Project Name:</strong> Project Portfolio
-                <span class="project_date">Publication Date: October 2017</span>
+                <span class="project_right">Publication Date: October 2017</span>
             </p>
-            <a class="btn_expand">Show More/Less...</a>
-                   
+            <a class="btn_expand">Show More/Less</a>   
     		<div class="portfolio_entry_detail">	
-    		<p>Languages:</p>	
-    		<a class="portfolio_images">
-    			<img src="~/Images/imgLogoHtml5Css3Js.png" alt="Image of HTML5, CSS3 and JavaScript Logos"/>
-    			<img src="~/Images/imgLogoCSharpVS.jpg" alt="Image of C# and Visual Studio Logos"/>	
-    			<img src="~/Images/imgLogoASPRazor.png" alt="Image of ASP.NET Razor Logo"/>	
-    			<img src="~/Images/imgLogoXML.png" alt="Image of XML Logo"/>	
-    		</a>	
-    		<p>Frameworks:</p>
-    		 <a class="portfolio_images">
-                <img src="~/Images/imgLogoASPNETMVC.jpg" alt="Image of Microsoft ASP.NET MVC Logo"/>
-            </a>	
-    		 <p>Deployment:</p>
-             <a class="portfolio_images">
-                <img src="~/Images/imgLogoAzure.png" alt="Image of Microsoft Azure Logo"/>
-            </a>	
-    		<p>Project Trailer:</p>  
+        		<p>Languages:</p>	
+        		<a class="portfolio_images">
+        			<img src="~/Images/imgLogoHtml5Css3Js.png" alt="Image of HTML5, CSS3 and JavaScript Logos"/>
+        			<img src="~/Images/imgLogoCSharpVS.jpg" alt="Image of C# and Visual Studio Logos"/>	
+        			<img src="~/Images/imgLogoASPRazor.png" alt="Image of ASP.NET Razor Logo"/>	
+        			<img src="~/Images/imgLogoXML.png" alt="Image of XML Logo"/>	
+        		</a>	
+        		<p>Frameworks:</p>
+        		 <a class="portfolio_images">
+                    <img src="~/Images/imgLogoASPNETMVC.jpg" alt="Image of Microsoft ASP.NET MVC Logo"/>
+                </a>	
+        		 <p>Deployment:</p>
+                 <a class="portfolio_images">
+                    <img src="~/Images/imgLogoAzure.png" alt="Image of Microsoft Azure Logo"/>
+                </a>	
+        		<p>Project Trailer:</p>  
                 <p>Production Pending</p>
-
-    		<p>Project Description:</p>	
-    		<p>
-                This project is build on an ASP.NET Core framework and is designed to showcase John's software portfolio from
-    		    September 2016 onwards. The site is dedicated to the showcasing of his software projects along with his 
-    			background, resume, writing portfolio with Irish Tech News and also a contact form. The application is
-                written on a ASP.NET core stack in C sharp with a native XML database to store contact form information. 
-    			The front end is crafted using Razor, HTML5, CSS3 and Javascript. The purpose is to give you a good UX experience
-                in checking out John's software project and finding out more about him through the site and its social media/contact
-    			links/details.
-    		</p>
-    		<p>Project Demonstration:</p>   
+        		<p>Project Description:</p>	
+        		<p>
+                    This project is build on an ASP.NET Core framework and is designed to showcase John's software portfolio from
+        		    September 2016 onwards. The site is dedicated to the showcasing of his software projects along with his 
+        			background, resume, writing portfolio with Irish Tech News and also a contact form. The application is
+                    written on a ASP.NET core stack in C sharp with a native XML database to store contact form information. 
+        			The front end is crafted using Razor, HTML5, CSS3 and Javascript. The purpose is to give you a good UX experience
+                    in checking out John's software project and finding out more about him through the site and its social media/contact
+        			links/details.
+        		</p>
+        		<p>Project Demonstration:</p>   
     			<p>Production Pending</p>
-				<p>Github Repository: <a href="https://github.com/johnmlhll/ProjectPortfolio" target="_blank">Project Portfolio</a></p> 
+				<div class="entry_urls">
+				    <p>Github Repository: <a href="https://github.com/johnmlhll/ProjectPortfolio" target="_blank">Project Portfolio</a></p>
+					<p>Live Site - Hyperlink: <a href="jmulhall.azurewebsites.net" target="_blank">Software Portfolio</a></p>
+				</div> 
     		</div>	
        </div>
-
 		<!--Portfolio Entry 02 - MulderbertPX-->
         <div class="portfolio_entry">
             <hr/>   
             <p>
                 <strong>Project Name:</strong> MulderbertPX
-                <span class="project_date">Publication Date: October 2017</span>
+                <span class="project_right">Publication Date: October 2017</span>
             </p>
-            <a class="btn_expand">Show More/Less...</a>
-                   
+            <a class="btn_expand">Show More/Less</a>
             <div class="portfolio_entry_detail">    
-            <p>Languages:</p>   
-            <a class="portfolio_images">
-                <img src="~/Images/imgLogoHtml5Css3Js.png" alt="Image of HTML5, CSS3 and JavaScript Logos"/>
-                <img src="~/Images/imgLogoCSharpVS.jpg" alt="Image of C# and Visual Studio Logos"/> 
-                <img src="~/Images/imgLogoASPRazor.png" alt="Image of ASP.NET Razor Logo"/> 
-                <img src="~/Images/imgLogoXML.png" alt="Image of XML Logo"/>    
-            </a>    
-            <p>Frameworks:</p>
-             <a class="portfolio_images">
-                <img src="~/Images/imgLogoASPNETMVC.jpg" alt="Image of Microsoft ASP.NET MVC Logo"/>
-				<img src="~/Images/imgLogoMicrosoftSQLServer.png" alt="Image of SQL Server Logo"/>	
-            </a>    
-             <p>Deployment:</p>
-             <a class="portfolio_images">
-                <img src="~/Images/imgLogoAzure.png" alt="Image of Microsoft Azure Logo"/>
-					
-            </a>    
-            <p>Project Trailer:</p>  
+                <p>Languages:</p>   
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoHtml5Css3Js.png" alt="Image of HTML5, CSS3 and JavaScript Logos"/>
+                    <img src="~/Images/imgLogoCSharpVS.jpg" alt="Image of C# and Visual Studio Logos"/> 
+                    <img src="~/Images/imgLogoASPRazor.png" alt="Image of ASP.NET Razor Logo"/> 
+                    <img src="~/Images/imgLogoXML.png" alt="Image of XML Logo"/>    
+                </a>    
+                <p>Frameworks:</p>
+                 <a class="portfolio_images">
+                    <img src="~/Images/imgLogoASPNETMVC.jpg" alt="Image of Microsoft ASP.NET MVC Logo"/>
+    				<img src="~/Images/imgLogoMicrosoftSQLServer.png" alt="Image of SQL Server Logo"/>	
+                </a>    
+                <p>Deployment:</p>
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoAzure.png" alt="Image of Microsoft Azure Logo"/>
+                </a>    
+                <p>Project Trailer:</p>  
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/-R5FL4Z5FFM" frameborder="0" allowfullscreen=true></iframe>
-
-            <p>Project Description:</p> 
-            <p>
-                This project is build on an ASP.NET (native) framework and is designed to showcase a version 2.0 of a college project
-				that was done in v1.0 as a group project. Niall Colbert, Diarmiud Dermody and John made up the V1.0 team. 
-				The site is dedicated to the showcasing of a minimum viable product for a newly digitised (fictitious) Fridge company 
-				called Mulderbert & Co, whom are an established bricks and motor company moving into the digital space. The application 
-				is written on a ASP.NET stack in C sharp with a native XML database for contacts us information along with SQL server for 
-				customer and transactional information. The relational Database instance is designed and developed to 3rd normal form
-                ensuring good quality data persistence for core data generated by the site. The front end is crafted using Razor, 
-				HTML5, CSS3 and Javascript. The purpose is to give you a good overview of John's technical and design ability in a 
-				prior designed and built application, which he re-engineered to a smaller cost footprint yet maintaining data retention to 
-                a good standard for deployment on Azure.
-            </p>
-            <p>Project Demonstration:</p>   
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8Gn8VkOoQiY" frameborder="0" allowfullscreen=true></iframe>
-			<p>Github Repository: <a href="https://github.com/johnmlhll/CSharp-MulderbertPX" target="_blank">MulderbertPX</a></p> 	
+                <p>Project Description:</p> 
+                <p>
+                    This project is build on an ASP.NET (native) framework and is designed to showcase a version 2.0 of a college project
+    				that was done in v1.0 as a group project. Niall Colbert, Diarmiud Dermody and John made up the V1.0 team. 
+    				The site is dedicated to the showcasing of a minimum viable product for a newly digitised (fictitious) Fridge company 
+    				called Mulderbert & Co, whom are an established bricks and motor company moving into the digital space. The application 
+    				is written on a ASP.NET stack in C sharp with a native XML database for contacts us information along with SQL server for 
+    				customer and transactional information. The relational Database instance is designed and developed to 3rd normal form
+                    ensuring good quality data persistence for core data generated by the site. The front end is crafted using Razor, 
+    				HTML5, CSS3 and Javascript. The purpose is to give you a good overview of John's technical and design ability in a 
+    				prior designed and built application, which he re-engineered to a smaller cost footprint yet maintaining data retention to 
+                    a good standard for deployment on Azure.
+                </p>
+                <p>Project Demonstration:</p>   
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8Gn8VkOoQiY" frameborder="0" allowfullscreen=true></iframe>
+    			<div class="entry_urls">
+					<p>Github Repository: <a href="https://github.com/johnmlhll/CSharp-MulderbertPX" target="_blank">MulderbertPX</a></p>
+					<p>Live Site - Hyperlink: <a href="https://mulderbertpx.azurewebsites.net/" target="_blank">MulderbertPX</a></p>
+				</div> 	
             </div>  
        </div>
 		
